[metadata]
name = poe-cli
version = 0.1.0
author = SalahDin Rezk
author_email = salah2112004@gmail.com
description = Command line interface for Poe.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/salastro/poe-cli
project_urls =
    Bug Tracker = https://github.com/salastro/poe-cli/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    argparse>=1.4.0
    certifi>=2023.5.7
    charset-normalizer>=3.1.0
    idna>=3.4
    markdown-it-py>=2.2.0
    mdurl>=0.1.2
    poe-api>=0.4.0
    pygments>=2.15.1
    pysocks>=1.7.1
    python-socks>=2.3.0
    requests[socks]>=2.31.0
    rich>=13.3.5
    tls-client>=0.2.1
    urllib3>=2.0.2
    websocket-client>=1.5.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    poe = poe_cli.main:main
